--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@types/multer": "^2.0.0",
     "@types/node-cron": "^3.0.11",
     "axios": "^1.12.0",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -101,7 +101,7 @@
     "@replit/vite-plugin-cartographer": "^0.3.0",
     "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
-    "@tailwindcss/vite": "^4.1.3",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/bcrypt": "^5.0.2",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/cors": "^2.8.19",
@@ -122,8 +122,8 @@
     "@vitejs/plugin-react-swc": "^3.7.0",
     "autoprefixer": "^10.4.20",
     "concurrently": "^9.2.1",
-    "drizzle-kit": "^0.31.5",
-    "esbuild": "^0.25.0",
+    "drizzle-kit": "^0.31.8",
+    "esbuild": "^0.27.2",
     "eslint": "^9.37.0",
     "http-proxy-middleware": "^3.0.5",
     "postcss": "^8.4.47",
@@ -135,7 +135,8 @@
   "overrides": {
     "@babel/helpers": "^7.26.10",
     "brace-expansion": "^2.0.2",
-    "on-headers": "^1.0.2"
+    "on-headers": "^1.0.2",
+    "esbuild": "^0.27.2"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
